Pull #18322: auto refactoring by org.openrewrite.java.migrate.util.ListFirstAndLast