@@ -581,7 +581,7 @@ public class CheckerTest extends AbstractModuleTestSupport {
         final List<AuditListener> listeners = TestUtil.getInternalStateListAuditListener(checker,
                 "listeners");
         assertWithMessage("Invalid child listener class")
-                .that(listeners.get(listeners.size() - 1) instanceof DebugAuditAdapter)
+                .that(listeners.getLast() instanceof DebugAuditAdapter)
                 .isTrue();
     }
 
